# kinetics_modelling

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: ob006-run0.ini  sample_region.ini
docs/: mkdocs.yml
docs/docs/: index.md
kinetics_modelling/: __init__.py  config.py  dataset.py  features.py  fetch_bed_kinetics.py  fetch_bed_kinetics.sh  fetch_null_kinetics.py  fetch_null_kinetics.sh  plots.py
kinetics_modelling/modeling/: lasso_ob006-run1.py  predict.py  train.py
notebooks/: 0.0-hank-basicTest.ipynb  0.0-hank-ob006-full.ipynb  0.0-hank-predictQual.ipynb
plots/fn_by_quality/: fn_by_quality.py
plots/fn_count_by_3mer/: plot.py
plots/fn_count_by_3mer_q93/: plot.py
plots/fn_hist/: plot.py
plots/fn_qual_scatter/: plot.py
plots/fn_qual_uncertainty/: fn_by_quality.py
plots/ipd_distributions_by_fn/: plot.py
plots/ipd_mean_by_passes_facet/: plot.py
plots/ipd_var_by_passes_facet/: plot.py
plots/kinetics_by_fn_unfiltered/: plot.py
plots/kinetics_mean_sd_by_passes_facet/: plot.py
plots/kinetics_variance_all3mers_byfn/: plot.py  plot_2.py
plots/qual_hist/: plot.py
plots/sm_q90_percent/: plot.py
plots/sm_sx_hist/: plot.py
plots/sm_sx_q90_percent/: plot.py
plots/sm_sx_q93_percent/: plot.py
plots/sm_sx_ratio_quality/: plot.py
plots/sx_q90_percent/: plot.py
plots/sx_qual_facet_on_sm/: plot.py
