[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kinetics_modelling"
version = "0.0.1"
description = "Retrieval and analysis of PacBio kinetics data from BAM files in the context of observed mutation data."
authors = [
  { name = "Chester Henry Charlton" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.7"


[tool.ruff]
line-length = 99
src = ["kinetics_modelling"]
include = ["pyproject.toml", "kinetics_modelling/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["kinetics_modelling"]
force-sort-within-sections = true

